--- a/Web_Dev_Udemy/CSS-MySite/CSS/styles.css
+++ b/Web_Dev_Udemy/CSS-MySite/CSS/styles.css
@@ -1,23 +1,7 @@
-body {
+body  {
   margin: 0px;
 }
 
-.top-container {
-  background-color: #e4f9f5;
-}
-
-.middle-container {
-  background-color: red;
-  width: 200px;
-  height: 200px;
-}
-
-.bottom-container {
-  background-color: blue;
-  width: 200px;
-  height: 200px;
-}
-
-h1 {
-  margin-top: 0px;
+.top_container  {
+  background-color: #E4F9F5;  
 }
