--- a/Web_Dev_Udemy/MySite/CSS/styles.css
+++ b/Web_Dev_Udemy/MySite/CSS/styles.css
@@ -1,12 +1,12 @@
-body  {
+body {
   color: #40514e;
   margin: 0px;
   text-align: center;
-  font-family: 'Merriweather', serif; 
+  font-family: "Merriweather", serif;
 }
 
-.top_container  {
-  background-color: #E4F9F5;  
+.top_container {
+  background-color: #e4f9f5;
   padding-top: 100px;
   position: relative;
 }
@@ -20,7 +20,7 @@ body  {
   margin-top: 5rem;
 }
 
-.top-cloud  {
+.top-cloud {
   position: absolute;
   right: 400px;
   top: 60px;
@@ -35,22 +35,22 @@ body  {
 }
 
 .mountain {
-  padding-top: 60px;
+  padding-top: 30px;
 }
 
 p {
   line-height: 2;
 }
 
-h1  {
-  font-family: 'Sacramento', cursive;
+h1 {
+  font-family: "Sacramento", cursive;
   font-size: 5.625rem;
   color: #66bfbf;
 }
 
 a {
   color: #40514e;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   margin: 10px 20px;
   text-decoration: none;
 }
@@ -60,27 +60,27 @@ a:hover {
   font-size: 25px;
 }
 
-.intro  {
+.intro {
   font-size: 1.4rem;
   margin-bottom: 30px;
   font-weight: normal;
   line-height: 2;
 }
 
-.heading  {
+.heading {
   margin: 50px auto 0 auto;
   height: 110px;
 }
 
-h2  {
-  font-family: 'Montserrat', sans-serif;
+h2 {
+  font-family: "Montserrat", sans-serif;
   font-size: 2.5rem;
   color: #66bfbf;
   padding: 10px;
 }
 
-h3  {
-  font-family: 'Montserrat', sans-serif;
+h3 {
+  font-family: "Montserrat", sans-serif;
   color: #11999e;
 }
 
@@ -90,7 +90,7 @@ h3  {
   border-radius: 500px;
 }
 
-.web-dev  {
+.web-dev {
   padding-right: 50px;
   height: 200px;
   width: 200px;
@@ -98,21 +98,21 @@ h3  {
   float: left;
 }
 
-.autocad  {
+.autocad {
   height: 200px;
   width: 250px;
   border-radius: 200px;
   float: right;
 }
 
-.skill-row  {
+.skill-row {
   height: 200px;
   width: 50%;
   margin: 100px auto 100px auto;
   text-align: left;
 }
 
-hr  {
+hr {
   border-color: #eaf6f6;
   border-style: dotted;
   border-width: 6px;
@@ -122,17 +122,17 @@ hr  {
 }
 
 .BUTTON_TWL {
-  background: #11CDD4;
-  background-image: -webkit-linear-gradient(top, #11CDD4, #11999E);
-  background-image: -moz-linear-gradient(top, #11CDD4, #11999E);
-  background-image: -ms-linear-gradient(top, #11CDD4, #11999E);
-  background-image: -o-linear-gradient(top, #11CDD4, #11999E);
-  background-image: -webkit-gradient(to bottom, #11CDD4, #11999E);
+  background: #11cdd4;
+  background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -webkit-gradient(to bottom, #11cdd4, #11999e);
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
   border-radius: 8px;
-  color: #FFFFFF;
-  font-family: 'Montserrat', sans-serif;
+  color: #ffffff;
+  font-family: "Montserrat", sans-serif;
   font-size: 20px;
   font-weight: 1000;
   padding: 20px 40px;
@@ -140,7 +140,7 @@ hr  {
   -moz-box-shadow: 1px 1px 20px 0 #000000;
   box-shadow: 1px 1px 5px 0 #000000;
   text-shadow: 1px 1px 20px #000000;
-  border: solid #337FED 1px;
+  border: solid #337fed 1px;
   text-decoration: none;
   display: inline-block;
   cursor: pointer;
@@ -149,13 +149,13 @@ hr  {
 }
 
 .BUTTON_TWL:hover {
-  border: solid #337FED 1px;
-  background: #30E3CB;
-  background-image: -webkit-linear-gradient(top, #30E3CB, #2BC4AD);
-  background-image: -moz-linear-gradient(top, #30E3CB, #2BC4AD);
-  background-image: -ms-linear-gradient(top, #30E3CB, #2BC4AD);
-  background-image: -o-linear-gradient(top, #30E3CB, #2BC4AD);
-  background-image: -webkit-gradient(to bottom, #30E3CB, #2BC4AD);
+  border: solid #337fed 1px;
+  background: #30e3cb;
+  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -webkit-gradient(to bottom, #30e3cb, #2bc4ad);
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   border-radius: 20px;
@@ -167,7 +167,7 @@ hr  {
   background-color: #66bfbf;
 }
 
-.copyright  {
+.copyright {
   color: #eaf6f6;
   margin-bottom: 0;
   font-size: 0.75rem;
