--- a/Web_Dev_Udemy/Bootstrap/TinDog Website/css/styles.css
+++ b/Web_Dev_Udemy/Bootstrap/TinDog Website/css/styles.css
@@ -156,3 +156,42 @@ h3 {
         text-align: center;
     }
 }
+
+#cta    {
+    text-align: center;
+    background-color: #ff4c68;
+    color: #fff;
+    padding: 4rem;
+}
+
+.cta-line   {
+    padding: 1rem 18rem 2rem;
+    line-height: 1.5;
+    font-size: 2.5rem;
+}
+
+.cta-btn    {
+    margin: 0 0.8rem;
+}
+
+#footer {
+    text-align: center;
+
+}
+
+.icon   {
+    padding: 0 1rem;
+}
+
+.footer-content {
+    padding: 4rem 0 2rem;
+}
+
+.copyright  {
+    padding-top: 1rem;
+    color: grey;
+}
+
+.icon-link  {
+    color: #000;
+}
