--- a/Web_Dev_Udemy/DOM/styles.css
+++ b/Web_Dev_Udemy/DOM/styles.css
@@ -1,3 +1,12 @@
 h1  {
     color: hotpink;
 }
+
+.button:active {
+    color: indigo;
+    background-color: khaki;
+}
+
+.huge   {
+    font-size: 10rem;
+}
