--- a/freeCodeCamp/digitalClock/styles.css
+++ b/freeCodeCamp/digitalClock/styles.css
@@ -47,3 +47,9 @@ body    {
     padding-top: 12px;
     font-weight: 300;
 } 
+
+@media all and (max-width: 600px)   {
+    .main   {
+        margin: 35vh auto;
+    }
+}
