--- a/freeCodeCamp/digitalClock/styles.css
+++ b/freeCodeCamp/digitalClock/styles.css
@@ -14,7 +14,7 @@ body    {
     background: rgb(195, 194, 194);
     width: 400px;
     height: 175px;
-    margin: 100px auto;
+    margin: 35vh auto;
     position: relative;
     border-radius: 5px;
 }
